@@ -43,5 +43,4 @@
 17. Lack of implicit conversion from MathNet.Numerics.LinearAlgebra.Double.DenseMatrix to MathNet.Numerics.LinearAlgebra.Complex.DenseMatrix coupled with dynamic sqrt(x) causes a lot of bugs https://github.com/mathnet/mathnet-numerics/issues/304
 	eg this is bug:
 	var m0s = sqrt(-1)·matrix({{1,0}});//Operator '*' cannot be applied to operands of type 'System.Numerics.Complex' and 'MathNet.Numerics.LinearAlgebra.Double.DenseMatrix'
-19. writeln(i); outputs 1·i, should just output i
 	
